// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center testClassName"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button align 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-left"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button altAction 1`] = `
<div
  className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button dangerous 1`] = `
<div
  className="obojobo-draft--components--button is-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button disabled 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    disabled={true}
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button isSubmittable 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`Button isSubmittable 2`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`Button shouldPreventTab 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    disabled={true}
    tabIndex="-1"
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button with empty string value 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    
  </button>
</div>
`;

exports[`Button with null value 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    Label
  </button>
</div>
`;

exports[`Button with value 1`] = `
<div
  className="obojobo-draft--components--button is-not-dangerous align-center"
  contentEditable={false}
>
  <button
    className="button"
    contentEditable={false}
    type="button"
  >
    child value
  </button>
</div>
`;
